@@ -52,6 +52,8 @@ Each release lists incompatible changes at its top.
 @item Miscellaneous Changes
 @itemize @minus
 @item Make @code{decorate-transients} a UI option (in appearance group) [Christopher Bratusek]
+
+@item Updated @code{Elberg-tabbed} and @code{gradient-tabbed} for tab-system as of Sawfish 1.9.1 [fuchur]
 @end itemize
 @end itemize
 @heading 1.9.1 "Voyager"
