@@ -10,6 +10,14 @@
 	has support for tabs [note that in Sawfish different windows can have
 	different frame-styles!] [fuchur]
 
+	* themes/StyleTab/theme.jl: updated for latest tab changes [fuchur]
+
+	* themes/Elberg-tabbed/theme.jl: support for tab-system as of 1.9.1
+	[fuchur]
+
+	* themes/gradient-tabbed/theme.jl: support for tab-system as of 1.9.1
+	[fuchur]
+
 2012-08-31  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* lisp/sawfish/wm/tabs/tab.jl: add support for coloring a window-title
 	in a different color, when a window is marked for tabbing [fuchur]
